--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js"></script>
     <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Rock Paper Scissors</h1>
+    <p>First to score 5 points wins!</p>
+    <div class="g-wrapper">
+      <div class="p-container">
+        <h2 class="p-label">Human</h2>
+          <div class="u-container">
+            <div class="u-profile">
+              <div class="p-type">
+                <img src="img/richie.jpeg" alt="richie">
+              </div>
+              <div>
+                <h3>Score</h3>
+                <h2 class="u-score">0</h2>
+              </div>
+          </div>
+          <div class="user-buttons">
+            <div class="rock-button" >
+          </div>
+
+      </div>
+    </div>
+
+  <script src="app.js"></script>
+  </body>
 </html>
