--- a/index.html
+++ b/index.html
@@ -16,20 +16,55 @@
           <div class="u-container">
             <div class="u-profile">
               <div class="p-type">
-                <img src="img/richie.jpeg" alt="richie">
+                <img src="" alt="">
               </div>
               <div>
                 <h3>Score</h3>
                 <h2 class="u-score">0</h2>
               </div>
           </div>
-          <div class="user-buttons">
-            <div class="rock-button" >
+          <div class="u-buttons">
+              <div class="r button" data-button="rock">
+              <img src="img/rock.svg" height="50px" />
+              <h3>Rock</h3>
           </div>
-
+          <div class="p button" data-button="paper">
+              <img src="img/paper-.svg" height="50px" />
+              <h3>Paper</h3 class="selection">
+          </div>
+          <div class="s button" data-button="scissors">
+              <img src="img/scissors.svg" height="50px" />
+              <h3>Scissors</h3 class="selection">
+          </div> 
+          </div>
       </div>
+      <div class="p-container">
+        <h2 class="p-label">Computer</h2>
+        <div class="c-container">
+          <div class="c-profile">
+            <div class="p-type">
+              <img src="" alt="">
+            </div>
+            <div>
+              <h3>Score</h3>
+              <h2 class="c-score">0</h2>
+          </div>
+      </div>
+      <div class="u-buttons">
+          <div class="r button" data-button="rock">
+              <img src="img/rock.svg" height="50px" />
+              <h3>Rock</h3>
+          </div>
+          <div class="p button" data-button="paper">
+              <img src="img/paper-.svg" height="50px" />
+              <h3>Paper</h3>
+          </div>
+          <div class="s button" data-button="scissors">
+              <img src="img/scissors.svg" height="50px" />
+              <h3>Scissors</h3>
+          </div>
+        </div>
     </div>
-
   <script src="app.js"></script>
   </body>
 </html>
