--- a/index.html
+++ b/index.html
@@ -1,70 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rock Paper Scissors</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css" type="text/css" media="all">
+
+</head>
+
+<body>
     <h1>Rock Paper Scissors</h1>
-    <p>First to score 5 points wins!</p>
-    <div class="g-wrapper">
-      <div class="p-container">
-        <h2 class="p-label">Human</h2>
-          <div class="u-container">
-            <div class="u-profile">
-              <div class="p-type">
-                <img src="" alt="">
-              </div>
-              <div>
-                <h3>Score</h3>
-                <h2 class="u-score">0</h2>
-              </div>
-          </div>
-          <div class="u-buttons">
-              <div class="r button" data-button="rock">
-              <img src="img/rock.svg" height="50px" />
-              <h3>Rock</h3>
-          </div>
-          <div class="p button" data-button="paper">
-              <img src="img/paper-.svg" height="50px" />
-              <h3>Paper</h3 class="selection">
-          </div>
-          <div class="s button" data-button="scissors">
-              <img src="img/scissors.svg" height="50px" />
-              <h3>Scissors</h3 class="selection">
-          </div> 
-          </div>
-      </div>
-      <div class="p-container">
-        <h2 class="p-label">Computer</h2>
-        <div class="c-container">
-          <div class="c-profile">
-            <div class="p-type">
-              <img src="" alt="">
+    <p>The winner is first to 5 points</p>
+    <div class="game-wrapper">
+        <div class="player-container">
+            <h2 class="player-label">Human</h2>
+            <div class="user-container">
+                <div class="user-profile">
+                    <div class="player-type">
+                        <img src="img/user-solid-grey.svg" height="30px" />
+                    </div>
+                    <div>
+                        <h3>Score</h3>
+                        <h2 class="user-score">0</h2>
+                    </div>
+                </div>
+                <div class="user-buttons">
+                    <div class="rock button" data-button="rock">
+                        <img src="img/hand-rock-grey.svg" height="30px" />
+                        <h3>Rock</h3>
+                    </div>
+                    <div class="paper button" data-button="paper">
+                        <img src="img/hand-paper-grey.svg" height="30px" />
+                        <h3>Paper</h3 class="selection">
+                    </div>
+                    <div class="scissors button" data-button="scissors">
+                        <img src="img/hand-scissors-grey.svg" height="30px" />
+                        <h3>Scissors</h3 class="selection">
+                    </div>
+                </div>
             </div>
-            <div>
-              <h3>Score</h3>
-              <h2 class="c-score">0</h2>
-          </div>
-      </div>
-      <div class="u-buttons">
-          <div class="r button" data-button="rock">
-              <img src="img/rock.svg" height="50px" />
-              <h3>Rock</h3>
-          </div>
-          <div class="p button" data-button="paper">
-              <img src="img/paper-.svg" height="50px" />
-              <h3>Paper</h3>
-          </div>
-          <div class="s button" data-button="scissors">
-              <img src="img/scissors.svg" height="50px" />
-              <h3>Scissors</h3>
-          </div>
+        </div>
+        <div class="player-container">
+            <h2 class="player-label">Computer</h2>
+            <div class="computer-container">
+                <div class="computer-profile">
+                    <div class="player-type">
+                        <img src="img/laptop-solid-grey.svg" height="30px" />
+                    </div>
+                    <div>
+                        <h3>Score</h3>
+                        <h2 class="computer-score">0</h2>
+                    </div>
+                </div>
+                <div class="computer-buttons">
+                    <div class="button computer-rock">
+                        <img src="img/hand-rock-grey.svg" height="30px" />
+                        <h3>Rock</h3>
+                    </div>
+                    <div class="button computer-paper">
+                        <img src="img/hand-paper-grey.svg" height="30px" />
+                        <h3>Paper</h3>
+                    </div>
+                    <div class="button computer-scissors">
+                        <img src="img/hand-scissors-grey.svg" height="30px" />
+                        <h3>Scissors</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-  <script src="app.js"></script>
-  </body>
+
+    <script src="app.js"></script>
+
+</body>
+
 </html>
